--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
   "author": "Ilana, Michelle, Allie",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^18.11.9",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "history": "^4.9.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -55,6 +59,9 @@
     "redux-thunk": "^2.3.0",
     "supertest": "^4.0.2",
     "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1"
+    "webpack-cli": "^4.3.1",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
+    "http": "^0.0.1-security"
   }
 }
