--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
+    "react-bootstrap": "^2.6.0",
     "sequelize": "^6.3.5",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4"
@@ -45,6 +46,7 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "esm": "^3.2.25",
+    "http": "^0.0.1-security",
     "mocha": "^6.2.3",
     "nodemon": "^1.19.4",
     "react": "^16.8.6",
@@ -57,11 +59,10 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
-    "supertest": "^4.0.2",
-    "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
-    "http": "^0.0.1-security"
+    "supertest": "^4.0.2",
+    "webpack": "^5.15.0",
+    "webpack-cli": "^4.3.1"
   }
 }
