--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "history": "^4.9.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "konva": "^8.3.14",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
+    "react-konva": "^18.2.3",
     "sequelize": "^6.3.5",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
@@ -44,16 +46,14 @@
     "babel-loader": "^8.2.2",
     "chai": "^4.2.0",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
     "esm": "^3.2.25",
     "http": "^0.0.1-security",
     "mocha": "^6.2.3",
     "nodemon": "^1.19.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
-    "react-test-renderer": "^16.4.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
