--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^18.11.9",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "bootstrap": "^5.2.3",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "history": "^4.9.0",
