--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
+    "react-is": "^18.2.0",
     "sequelize": "^6.3.5",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
