--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^18.11.9",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "bootstrap": "^5.2.3",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "history": "^4.9.0",
@@ -30,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
+    "react-bootstrap": "^2.7.0",
     "react-is": "^18.2.0",
     "sequelize": "^6.3.5",
     "socket.io": "^4.5.4",
